corrected code to java 8 version